using System;
using System.Collections.Generic;
using System.Linq;
using System.Web;

namespace dominio
{
    public class Imagen
    {
        public int ID { get; set; }
        public string ImagenUrl { get; set; }
        public bool Estado { get; set; }
    }
}